--- a/index.html
+++ b/index.html
@@ -638,21 +638,23 @@ IPv4 Address. . . . . . . . . . . : 172.25.112.1</div>
             <div class="platforms">
                 <div class="platform">
                     <i class="fab fa-windows"></i>
-                    <h3>Windows</h3>
-                    <p>支持 Windows 7 及以上版本</p>
-                    <a href="#" class="btn">下载</a>
+                    <h3>Windows命令行版本</h3>
+                    <p>支持 Windows 7 及以上版本（Windows Vista/7需要安装运行库）</p>
+                    <a href="https://github.com/user-attachments/files/21014783/etrc_1.6_beta3_windows.zip" class="btn">下载预编译包</a>
+                    <a href="https://github.com/user-attachments/files/21014790/etrc_1.6_beta3_windows_src.zip" class="btn">下载源代码</a>
+                </div>
+                <div class="platform">
+                    <i class="fab fa-windows"></i>
+                    <h3>Windows GUI版本</h3>
+                    <p>支持 Windows 7 及以上版本（Windows Vista/7需要安装运行库）</p>
+                    <a href="https://github.com/user-attachments/files/21027919/etrc_1.7_alpha1_gui_windows.zip" class="btn">下载预编译包</a>
+                    <a href="https://github.com/user-attachments/files/21027924/ver.1.7.GUI.zip" class="btn">下载源代码</a>
                 </div>
                 <div class="platform">
                     <i class="fab fa-linux"></i>
                     <h3>Linux</h3>
-                    <p>支持 Ubuntu, CentOS 等主流发行版</p>
-                    <a href="#" class="btn">下载</a>
-                </div>
-                <div class="platform">
-                    <i class="fab fa-apple"></i>
-                    <h3>macOS</h3>
-                    <p>支持 macOS 10.12 及以上版本</p>
-                    <a href="#" class="btn">下载</a>
+                    <p>支持常见发行版（需要python）</p>
+                    <a href="https://github.com/user-attachments/files/21014797/etrc_1.6_beta3_linux.zip" class="btn">下载源代码</a>
                 </div>
             </div>
         </div>
@@ -717,7 +719,7 @@ IPv4 Address. . . . . . . . . . . : 172.25.112.1</div>
                 <a href="#"><i class="fab fa-discord"></i></a>
             </div>
             <div class="copyright">
-                &copy; 2023 ETRC Terminal. 保留所有权利。
+                &copy; 2025 Chemsource Studio. 保留所有权利。
             </div>
         </div>
     </footer>
