--- a/index.html
+++ b/index.html
@@ -640,22 +640,18 @@ IPv4 Address. . . . . . . . . . . : 172.25.112.1</div>
                     <i class="fab fa-windows"></i>
                     <h3>Windows命令行版本</h3>
                     <p>支持 Windows 7 及以上版本（Windows Vista/7需要安装运行库）</p>
-                    <a href="https://github.com/user-attachments/files/21014783/etrc_1.6_beta3_windows.zip" class="btn">下载预编译包</a>
-                    <a href="https://github.com/user-attachments/files/21014790/etrc_1.6_beta3_windows_src.zip" class="btn">下载源代码</a>
                 </div>
                 <div class="platform">
                     <i class="fab fa-windows"></i>
                     <h3>Windows GUI版本</h3>
                     <p>支持 Windows 7 及以上版本（Windows Vista/7需要安装运行库）</p>
-                    <a href="https://github.com/user-attachments/files/21027919/etrc_1.7_alpha1_gui_windows.zip" class="btn">下载预编译包</a>
-                    <a href="https://github.com/user-attachments/files/21027924/ver.1.7.GUI.zip" class="btn">下载源代码</a>
                 </div>
                 <div class="platform">
                     <i class="fab fa-linux"></i>
                     <h3>Linux</h3>
                     <p>支持常见发行版（需要python）</p>
-                    <a href="https://github.com/user-attachments/files/21014797/etrc_1.6_beta3_linux.zip" class="btn">下载源代码</a>
                 </div>
+                <a href="https://github.com/chemsource/etrc/releases/tag/etrc" class="btn">前往GitHub Release下载</a>
             </div>
         </div>
     </section>
